[package]
name = "rocket-loadavg-api"
version = "0.1.0"
authors = ["Brandon Richardson <brandon.richardson4328@outlook.com>"]
[dependencies]
libc = "*"
rocket = "0.2.6"
rocket_codegen = "0.2.6"
rocket_contrib = { version = "0.2.6", features = ["json"] }
serde = "0.9"
serde_json = "0.9"
serde_derive = "0.9"